# blooper

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Projucer/: blooper.jucer
Projucer/Builds/VisualStudio2019/: blooper.sln  blooper_App.vcxproj  blooper_App.vcxproj.filters  resources.rc
Projucer/JuceLibraryCode/: JuceHeader.h
Projucer/Source/: Main.cpp  loop.cpp  loop.hpp  loop_group.cpp  loop_group.hpp  loop_rack.cpp  loop_rack.hpp  main_component.cpp  main_component.hpp  utils.cpp  utils.hpp
Projucer/Source/pch/: pch.hpp
audio/: Standalone.cpp  standalone.cpp
cmake/: EnvFunc.cmake
cmake/cache_init/: all.cmake  export.cmake
cmake/toolchain/: codeblocks.cmake  vs2019.cmake  xcode.cmake
cmake/toolchain/compiler/: clang-cl.cmake  clang.cmake  gnu.cmake  intel.cmake  msvc.cmake
cmake/toolchain/default/: compiler.cmake
include/blooper/: EditComponent.hpp  MainComponent.hpp  PluginWindow.hpp  ToolbarComponent.hpp  abstract.hpp  blooper.hpp  fwd.hpp  main_component.hpp  pch.hpp
include/blooper/assets/: assets.hpp
include/blooper/body/: BodyComponent.hpp  BodyComponentOld.hpp  BodyMenuBar.hpp  BodyMenuBarComponent.hpp  BodyWindow.hpp  TestBodyWindow.hpp  body.hpp
include/blooper/browser/: BrowserComponent.hpp
include/blooper/components/: components.hpp
include/blooper/context/: Component.hpp  ContextClass.hpp  EngineBehaviour.hpp  PropertyStorage.hpp  TestContextClass.hpp  UIBehaviour.hpp  Window.hpp  context.hpp
include/blooper/dev/: DevComponent.hpp  DevDevicesComponent.hpp  DevEditComponent.hpp  DevEngineComponent.hpp  DevProjectComponent.hpp  DevTransportComponent.hpp  DevValueTreeComponent.hpp  DevWindow.hpp  dev.hpp
include/blooper/edit/: ClipComponents.hpp  EditComponent.hpp  PlayheadComponent.hpp  TrackComponents.hpp
include/blooper/engine/: EngineBehaviour.hpp  PropertyStorage.hpp  UIBehaviour.hpp  engine.hpp
include/blooper/help/: DocsComponent.hpp  FAQComponent.hpp  HelpComponent.hpp  HelpWindow.hpp  HowToComponent.hpp  InfoComponent.hpp  InfoWindow.hpp  TutorialComponent.hpp  help.hpp
include/blooper/internal/: EditViewState.hpp  IDs.hpp  edit_ext.hpp  engine_ext.hpp  id.hpp  internal.hpp  project_ext.hpp  track_ext.hpp  utilities.hpp  utils.hpp
include/blooper/plugins/: PluginComponent.hpp  PluginMenu.hpp  PluginWindow.hpp  plugins.hpp
include/blooper/projects/: ProjectMenu.hpp
include/blooper/rack/: RackComponent.hpp
include/blooper/startup/: App.hpp  TestApp.hpp  startup.hpp
include/blooper/style/: LookAndFeel.hpp  style.hpp
include/blooper/toolbar/: ToolbarComponent.hpp
include/blooper/updates/: updates.hpp
pch/: pch.hpp
src/: EditComponent.cpp  PluginWindow.cpp  RackComponent.cpp  ToolbarComponent.cpp  blooper.cpp  main_component.cpp
src/body/: BodyComponent.cpp  BodyMenuBar.cpp  BodyMenuBarComponent.cpp  BodyWindow.cpp  TestBodyWindow.cpp
src/body/footer/: FooterComponent.cpp
src/body/header/: HeaderComponent.cpp  HeaderMenuBarComponent.cpp  HeaderToolbarComponent.cpp
src/body/panels/: PanelWindow.cpp  PanelsComponent.cpp
src/browser/: BrowserComponent.cpp
src/components/clips/: AudioClipComponent.cpp  ClipComponent.cpp  ClipComponentFactory.cpp  MidiClipComponent.cpp  RecordingClipComponent.cpp  WaveAudioClipComponent.cpp
src/components/dev/: DevComponent.cpp  DevDevicesComponent.cpp  DevEditComponent.cpp  DevEngineComponent.cpp  DevProjectComponent.cpp  DevTransportComponent.cpp  DevValueTreeComponent.cpp  DevWindow.cpp
src/components/help/: DocsComponent.cpp  FAQComponent.cpp  HelpComponent.cpp  HelpWindow.cpp  HowToComponent.cpp  InfoComponent.cpp  InfoWindow.cpp  TutorialComponent.cpp
src/components/properties/: FilePathPropertyComponent.cpp
src/components/stats/: CPUStatusComponent.cpp  CommandStatusComponent.cpp  SelectionStatusComponent.cpp  TransportStatusComponent.cpp  UndoStatusComponent.cpp
src/components/takes/: AudioTakeComponent.cpp  MidiTakeComponent.cpp  RecordingTakeComponent.cpp  TakeComponent.cpp  TakeComponentFactory.cpp  WaveAudioTakeComponent.cpp
src/components/tracks/: TrackButtonComponent.cpp  TrackClipsComponent.cpp  TrackClipsDetailComponent.cpp  TrackClipsDetailContentComponent.cpp  TrackClipsDetailWindow.cpp  TrackComponent.cpp  TrackComponentFactory.cpp  TrackPlayheadComponent.cpp  TrackPluginsComponent.cpp
src/context/: Component.cpp  ContextClass.cpp  EngineBehaviour.cpp  PropertyStorage.cpp  TestContextClass.cpp  UIBehaviour.cpp  Window.cpp
src/context/behaviour/: AssetManager.cpp  EditManager.cpp  EngineBehaviour.cpp  PropertyStorage.cpp  Synchronizer.cpp  UIBehaviour.cpp
src/context/core/: CoreComponent.cpp  CoreContext.cpp  CoreWindow.cpp
src/context/devices/: DevicesMenuComponent.cpp  DevicesMenuWindow.cpp
src/context/plugins/: PluginComponent.cpp  PluginContentFactory.cpp  PluginEditorComponent.cpp  PluginEditorWindow.cpp  PluginPickerComponent.cpp  PluginPickerPopup.cpp  PluginTree.cpp  PluginWindow.cpp  PluginsMenuComponent.cpp  PluginsMenuWindow.cpp
src/context/projects/: ProjectComponent.cpp  ProjectWindow.cpp  ProjectsMenuComponent.cpp  ProjectsMenuWindow.cpp
src/context/settings/: SettingsAppearanceComponent.cpp  SettingsBehaviourComponent.cpp  SettingsDevicesComponent.cpp  SettingsKeymapsComponent.cpp  SettingsPluginsComponent.cpp  (+3 more)
src/dev/: DevComponent.cpp  DevDevicesComponent.cpp  DevEditComponent.cpp  DevEngineComponent.cpp  DevProjectComponent.cpp  DevTransportComponent.cpp  DevValueTreeComponent.cpp  DevWindow.cpp
src/edit/: ClipComponents.cpp  EditComponent.cpp  PlayheadComponent.cpp  TrackComponents.cpp
src/engine/: EngineBehaviour.cpp  PropertyStorage.cpp  UIBehaviour.cpp
src/help/: DocsComponent.cpp  FAQComponent.cpp  HelpComponent.cpp  HelpWindow.cpp  HowToComponent.cpp  InfoComponent.cpp  InfoWindow.cpp  TutorialComponent.cpp
src/plugins/: PluginComponent.cpp  PluginMenu.cpp  PluginWindow.cpp
src/projects/: ProjectMenu.cpp
src/rack/: RackComponent.cpp
src/startup/: App.cpp  TestApp.cpp
src/style/: LookAndFeel.cpp
src/toolbar/: ToolbarComponent.cpp
test/: test.cpp
(+315 files in other folders)
